 * Made 'normal' default priority for new bugs.
 * Added capability to monitor bugs even when not reporter or handler
 * Added basic private bug functionality
 * Added validation checks for all inputs that are passed on to database queries.
 * Added check_varset() function to replace if isset() else checks.
 * Updated Hungarian localization.
 * Updated Russian localization.
 * Updated Romanian localization.
 * Updated German localization.
 * Removed French2 localization (out of date, without HTML entities. Replaced by new French localization).
 * Removed HTML entities from all localization files.
 * Added $s_charset to all localization files.
 * Modified input checked variables to be prefixed by $c_.
 * Reworked code formatting for $c_ variables.
 * Modified form elements to be standards compliant.
 * Modified core_print_API.php to escape double quotes in text fields, instead of replacing them by single quotes.
 * Modified all string files to use single quotes instead of double quotes.
 * Modified all php files to use single quotes where double quotes were unnecessary.
 * Modified core_html_API.php to print a META-tag defining the charset.
 * Modified core_email_API.php to send a content-type header in emails.
 * Modified core_user_API.php, login.php and login_page.php to send the user back to the referring page after login.

2002.05.19  -  0.17.3

 * Bumped version number.
 * Fixed problem with CSV not downloading.
 * Fixed no colors when using non-English languages (temporary fix).
 * Fixed bug_close to add bugnote.
 * Fixed file uploads to not show up for VIEWERS.
 * Modified core_API.php to always turn magic_quotes_runtime OFF.
 * Modified disk uploads to use the file_download.php script.
 * Modified bugnote last_modified query slightly.
 * Modified reporter and assign_to option lists.
 * Updated PHP and MySQL requirements.
 * Updated Norwegian, Russian, Danish and Dutch translations.
 * Added die to print_header_redirect().
 * Added russian_koi8 translation.